--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FITNESS - Despierta tu mejor versión</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -88,10 +89,10 @@
     </ul>
     <p>Síguenos en redes:</p>
     <ul class="redes">
-      <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
-      <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-      <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
-      <li><a href="https://www.youtube.com/" target="_blank">YouTube</a></li>
+      <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+      <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
     </ul>
   </section>
 
