--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <!-- ENCABEZADO PRINCIPAL -->
   <header class="hero">
     <div class="overlay">
-      <div class="hero-text">
-        <h1>FITNESS</h1>
-        <p>Despierta tu mejor versión</p>
         <nav>
           <ul>
             <li><a href="#inicio">Inicio</a></li>
@@ -24,7 +21,6 @@
             <li><a href="#contacto">Contacto</a></li>
           </ul>
         </nav>
-      </div>
     </div>
   </header>
 
@@ -87,18 +83,20 @@
       <li>Teléfono: +51 948 019 629 (Karolay)</li>
       <li>Correo: Fitness@gmail.com</li>
     </ul>
-    <p>Síguenos en redes:</p>
-    <ul class="redes">
-      <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-      <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-      <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-    </ul>
   </section>
-
-
+  
   <!-- PIE DE PAGINA -->
   <footer>
+    <section id="redes">
+      <p>Síguenos en redes:</p>
+      <ul class="redes">
+        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+        <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+      </ul>
+    </section>
+    <hr class="linea-div">
     <p>© 2025 FITNESS - Despierta tu mejor versión</p>
     <p>Proyecto grupal desarrollado por Vanessa y Karolay para el curso Introducción al Desarrollo Web</p>
   </footer>
