--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 
 <body>
 
-  <!-- ENCABEZADO PRINCIPAL -->
+  <!-- ENCABEZADO -->
   <header class="hero">
-    <div class="overlay">
-        <nav>
-          <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#nosotros-servicios">Nosotros</a></li>
-            <li><a href="#entrenadores">Entrenadores</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-          </ul>
-        </nav>
-    </div>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#nosotros-servicios">Nosotros</a></li>
+        <li><a href="#entrenadores">Entrenadores</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
+    </nav>
   </header>
+  <div class="background"></div>
 
   <!--SECCION INICIO-->
   <section id="inicio" class="bienvenida">
