--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <!-- ENCABEZADO -->
   <header class="hero">
     <nav class="main-menu">
+      <div class="hero-text">
+        <h1><a href="index.html">FITNESS</a></h1>
+      </div>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#nosotros-servicios">Nosotros</a></li>
@@ -21,6 +24,7 @@
       </ul>
     </nav>
   </header>
+
   <div class="background"></div>
 
   <!--SECCION INICIO-->
