--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
 
   <!-- ENCABEZADO -->
   <header class="hero">
+    <div class="hero-text">
+      <h1><a href="index.html">FITNESS</a></h1>
+    </div>
     <nav class="main-menu">
-      <div class="hero-text">
-        <h1><a href="index.html">FITNESS</a></h1>
-      </div>
+      <input type="checkbox" id="menu-toggle">
+      <label for="menu-toggle" class="menu-icon">
+        <i class="fa fa-home"></i>
+      </label>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#nosotros-servicios">Nosotros</a></li>
