--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
       <h1><a href="index.html">FITNESS</a></h1>
     </div>
     <nav class="main-menu">
+      <!--CHECKBOX HOME-->
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon">
         <i class="fa fa-home"></i>
       </label>
       <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#nosotros-servicios">Nosotros</a></li>
-        <li><a href="#entrenadores">Entrenadores</a></li>
-        <li><a href="#contacto">Contacto</a></li>
+        <li><a href="#inicio">INICIO</a></li>
+        <li><a href="#nosotros-servicios">NOSOTROS</a></li>
+        <li><a href="#entrenadores">ENTRENADORES</a></li>
+        <li><a href="#contacto">CONTACTO</a></li>
       </ul>
     </nav>
   </header>
@@ -94,10 +95,14 @@
   
   <!-- PIE DE PAGINA -->
   <footer>
+    <section id="logo">
+      <img src="image.png" alt="LOGO BlackWhite" width="200">
+    </section>
+    <hr class="linea-div">
     <section id="redes">
       <p>Síguenos en redes:</p>
       <ul class="redes">
-        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
         <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
         <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
         <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
