--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--CHECKBOX HOME-->
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon">
-        <i class="fa fa-home"></i>
+        <i class="fa fa-bars"></i>
       </label>
       <ul>
         <li><a href="#inicio">INICIO</a></li>
