--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
 </head>
 
 <body>
-
   <!-- ENCABEZADO -->
-  <header class="hero">
-    <div class="hero-text">
-      <h1><a href="index.html">FITNESS</a></h1>
-    </div>
-    <nav class="main-menu">
-      <!--CHECKBOX HOME-->
-      <input type="checkbox" id="menu-toggle">
-      <label for="menu-toggle" class="menu-icon">
-        <i class="fa fa-bars"></i>
-      </label>
+  <header>
+    <h1><a href="index.html">FITNESS</a></h1>
+
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+    </label>
+
+    <nav>
       <ul>
-        <li><a href="#inicio">INICIO</a></li>
-        <li><a href="#nosotros-servicios">NOSOTROS</a></li>
-        <li><a href="#entrenadores">ENTRENADORES</a></li>
-        <li><a href="#contacto">CONTACTO</a></li>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#nosotros-servicios">Nosotros</a></li>
+      <li><a href="#entrenadores">Entrenadores</a></li>
+      <li><a href="contactanos.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
