--- a/contactanos.html
+++ b/contactanos.html
@@ -19,8 +19,8 @@
         <nav>
             <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#entrenadores">Entrenadores</a></li>
+            <li><a href="index.html#nosotros-servicios">Nosotros</a></li>
+            <li><a href="index.html#entrenadores">Entrenadores</a></li>
             <li><a href="contactanos.html">Contacto</a></li>
             </ul>
         </nav>
