--- a/index.html
+++ b/index.html
@@ -4,99 +4,129 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FITNESS - Despierta tu mejor versión</title>
+  <meta name="description" content="FITNESS es un gimnasio moderno que promueve el bienestar físico, mental y emocional a través del entrenamiento personalizado, clases grupales y asesoramiento nutricional.">
+  <meta name="keywords" content="gimnasio, fitness, entrenamiento, nutrición, salud, bienestar, motivación, Perú">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
+
   <!-- ENCABEZADO -->
   <header>
-    <h1><a href="index.html">FITNESS</a></h1>
+    <div class="logo-nombre">
+      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" alt="Logo FITNESS">
+      <h1><a href="index.html">FITNESS</a></h1>
+    </div>
 
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">
-        <i class="fa-solid fa-bars"></i>
+      <i class="fa-solid fa-bars"></i>
     </label>
 
     <nav>
       <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#nosotros-servicios">Nosotros</a></li>
-      <li><a href="#entrenadores">Entrenadores</a></li>
-      <li><a href="contactanos.html">Contacto</a></li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#nosotros">Nosotros</a></li>
+        <li><a href="#servicios">Servicios</a></li>
+        <li><a href="pages/planes.html">Planes</a></li>
+        <li><a href="pages/entrenadores.html">Entrenadores</a></li>
+        <li><a href="pages/galeria.html">Galería</a></li>
+        <li><a href="pages/contacto.html">Contacto</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="background"></div>
-
-  <!--SECCION INICIO-->
-  <section id="inicio" class="bienvenida">
-    <div class="bienvenida-texto">
-      <h2>Bienvenidos a FITNESS</h2>
-      <p>En FITNESS creemos que todos pueden alcanzar su mejor versión. Nuestro gimnasio ofrece un espacio moderno y motivador, equipado con máquinas de última generación. Cada sección busca inspirarte a adoptar un estilo de vida saludable.</p>
+  <!-- SECCION PRINCIPAL -->
+  <section id="inicio" class="hero">
+    <div class="hero-texto">
+      <h2>Despierta tu mejor versión</h2>
+      <p>En <strong>FITNESS</strong> te ayudamos a superar tus límites. Un espacio diseñado para transformar tu cuerpo y mente, con tecnología moderna, entrenadores certificados y una comunidad que te impulsa cada día.</p>
+      <a href="pages/planes.html" class="btn">¡Únete hoy!</a>
     </div>
-    <div class="bienvenida-logo">
-      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" 
-           alt="Logo Fitness">
+    <div class="hero-imagen">
+      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%201%20GYM%20(1).png" alt="Persona entrenando en gimnasio">
     </div>
   </section>
 
-  <!--SECCION NOSOTROS Y SERVICIOS-->
-  <section id="nosotros-servicios" class="flex-seccion">
-    <div class="imagen-lateral">
-      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%201%20GYM%20(1).png" 
-           alt="Chica Fitness">
+  <!-- SECCION NOSOTROS -->
+  <section id="nosotros" class="info">
+    <div class="texto">
+      <h2>Sobre Nosotros</h2>
+      <p>FITNESS nació en 2025 con la misión de inspirar hábitos saludables en la sociedad peruana. Nos enfocamos en el desarrollo integral de nuestros miembros, combinando entrenamiento físico, mental y nutricional.</p>
+      <p>Creemos que el cambio empieza con disciplina y motivación, por eso te acompañamos paso a paso con rutinas personalizadas, clases en grupo, charlas y seguimiento de tus resultados.</p>
+      <a href="pages/nosotros.html" class="btn-secundario">Conócenos más</a>
     </div>
-    <div class="info-lateral">
-      <h2>Nosotros</h2>
-      <p>FITNESS nació con el propósito de inspirar a las personas a alcanzar su máximo potencial. Promovemos el bienestar físico y mental a través de la disciplina, el esfuerzo y la constancia.</p>
-
-      <h2>Servicios</h2>
-      <ul>
-        <li><strong>Entrenamiento personalizado:</strong> Asesoría individual según tus metas.</li>
-        <li><strong>Clases grupales:</strong> Zumba, yoga, spinning y entrenamiento funcional.</li>
-        <li><strong>Rutinas en línea:</strong> Entrena desde cualquier lugar.</li>
-        <li><strong>Plan nutricional:</strong> Guía profesional para una alimentación saludable.</li>
-      </ul>
+    <div class="imagen">
+      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%202%20GYM.png" alt="Equipo FITNESS">
     </div>
   </section>
 
-  <!--SECCION ENTRENADORES-->
-  <section id="entrenadores" class="bg-light">
-    <h2>Nuestros Entrenadores</h2>
-    <div class="entrenadores">
+  <!-- SECCION SERVICIOS -->
+  <section id="servicios">
+    <h2>Nuestros Servicios</h2>
+    <div class="servicios-grid">
       <article>
-        <h3>Karolay</h3>
-        <p>Especialista en fuerza y rendimiento. Acompaña a cada miembro en su progreso.</p>
+        <i class="fa-solid fa-dumbbell"></i>
+        <h3>Entrenamiento Personalizado</h3>
+        <p>Rutinas adaptadas a tu condición física, con evaluación constante y asesoramiento profesional.</p>
       </article>
       <article>
-        <h3>Vanessa</h3>
-        <p>Entrenadora certificada en pilates y equilibrio corporal. Fomenta la armonía y bienestar.</p>
+        <i class="fa-solid fa-heartbeat"></i>
+        <h3>Clases Grupales</h3>
+        <p>Zumba, yoga, pilates, spinning y más. Vive la energía de entrenar en equipo.</p>
       </article>
       <article>
-        <h3>Sammy</h3>
-        <p>Instructor en cardio y resistencia. Diseña rutinas efectivas para todos los niveles.</p>
+        <i class="fa-solid fa-apple-whole"></i>
+        <h3>Nutrición Deportiva</h3>
+        <p>Plan alimenticio elaborado por nutricionistas especializados según tus metas.</p>
+      </article>
+      <article>
+        <i class="fa-solid fa-laptop"></i>
+        <h3>Entrenamiento Online</h3>
+        <p>Accede a clases en vivo o rutinas virtuales desde la comodidad de tu hogar.</p>
       </article>
     </div>
   </section>
 
-  <!--SECCION CONTACTO-->
-  <section id="contacto">
-    <h2>Contacto</h2>
-    <ul class="contacto">
-      <li>Teléfono: +51 929 377 161 (Vanessa)</li>
-      <li>Teléfono: +51 948 019 629 (Karolay)</li>
-      <li>Correo: Fitness@gmail.com</li>
-    </ul>
+  <!-- SECCION TESTIMONIOS -->
+  <section id="testimonios" class="bg-light">
+    <h2>Testimonios</h2>
+    <div class="testimonios-grid">
+      <article>
+        <p>"Gracias a FITNESS bajé 10 kilos y gané confianza en mí misma. ¡El mejor gimnasio de Arequipa!"</p>
+        <h4>- María López</h4>
+      </article>
+      <article>
+        <p>"Los entrenadores te motivan y personalizan todo. Me siento más fuerte y feliz cada día."</p>
+        <h4>- Jorge Ramos</h4>
+      </article>
+      <article>
+        <p>"Me encanta el ambiente, las clases de spinning y la comunidad. FITNESS cambió mi vida."</p>
+        <h4>- Lucía Paredes</h4>
+      </article>
+    </div>
   </section>
-  
-  <!-- PIE DE PAGINA -->
+
+  <!-- SECCION FAQ -->
+  <section id="faq">
+    <h2>Preguntas Frecuentes</h2>
+    <details>
+      <summary>¿Puedo probar una clase gratis?</summary>
+      <p>Sí, ofrecemos una clase de prueba gratuita para nuevos miembros.</p>
+    </details>
+    <details>
+      <summary>¿Qué horarios manejan?</summary>
+      <p>Estamos abiertos de lunes a sábado de 5:30 a.m. a 10:00 p.m. y domingos de 6:00 a.m. a 2:00 p.m.</p>
+    </details>
+    <details>
+      <summary>¿Tienen entrenadores personales?</summary>
+      <p>Sí, contamos con profesionales especializados en fuerza, resistencia y tonificación.</p>
+    </details>
+  </section>
+
+  <!-- PIE DE PÁGINA -->
   <footer>
-    <section id="logo">
-      <img src="image.png" alt="LOGO BlackWhite" width="200">
-    </section>
-    <hr class="linea-div">
     <section id="redes">
       <p>Síguenos en redes:</p>
       <ul class="redes">
@@ -108,7 +138,7 @@
     </section>
     <hr class="linea-div">
     <p>© 2025 FITNESS - Despierta tu mejor versión</p>
-    <p>Proyecto grupal desarrollado por Vanessa y Karolay para el curso Introducción al Desarrollo Web</p>
+    <p>Proyecto grupal desarrollado por <strong>Karolay</strong> y <strong>Vanessa</strong> — Laboratorio: <em>Introducción al Desarrollo Web</em></p>
   </footer>
 
 </body>
