--- a/index.html
+++ b/index.html
@@ -1,145 +1,147 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FITNESS - Despierta tu mejor versión</title>
-  <meta name="description" content="FITNESS es un gimnasio moderno que promueve el bienestar físico, mental y emocional a través del entrenamiento personalizado, clases grupales y asesoramiento nutricional.">
-  <meta name="keywords" content="gimnasio, fitness, entrenamiento, nutrición, salud, bienestar, motivación, Perú">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FITNESS - Despierta tu mejor versión</title>
+    <meta name="description" content="FITNESS es un gimnasio moderno que promueve el bienestar físico, mental y emocional a través del entrenamiento personalizado, clases grupales y asesoramiento nutricional.">
+    <meta name="keywords" content="gimnasio, fitness, entrenamiento, nutrición, salud, bienestar, motivación, Perú">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
 
-  <!-- ENCABEZADO -->
-  <header>
-    <div class="logo-nombre">
-      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" alt="Logo FITNESS">
-      <h1><a href="index.html">FITNESS</a></h1>
-    </div>
+    <!-- ENCABEZADO -->
+    <header>
+        <div class="logo-nombre">
+            <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" alt="Logo FITNESS" width="100px">
+          
+        </div>
 
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="menu-icon">
-      <i class="fa-solid fa-bars"></i>
-    </label>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+        </label>
 
-    <nav>
-      <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#nosotros">Nosotros</a></li>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="pages/planes.html">Planes</a></li>
-        <li><a href="pages/entrenadores.html">Entrenadores</a></li>
-        <li><a href="pages/galeria.html">Galería</a></li>
-        <li><a href="pages/contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-  </header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="pages/planes.html">Planes</a></li>
+                <li><a href="pages/entrenadores.html">Entrenadores</a></li>
+                <li><a href="pages/galeria.html">Galería</a></li>
+                <li><a href="contactanos.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- SECCION PRINCIPAL -->
-  <section id="inicio" class="hero">
-    <div class="hero-texto">
-      <h2>Despierta tu mejor versión</h2>
-      <p>En <strong>FITNESS</strong> te ayudamos a superar tus límites. Un espacio diseñado para transformar tu cuerpo y mente, con tecnología moderna, entrenadores certificados y una comunidad que te impulsa cada día.</p>
-      <a href="pages/planes.html" class="btn">¡Únete hoy!</a>
-    </div>
-    <div class="hero-imagen">
-      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%201%20GYM%20(1).png" alt="Persona entrenando en gimnasio">
-    </div>
-  </section>
+    <!-- SECCION PRINCIPAL -->
+    <main>
+        <section id="inicio" class="hero">
+            <div class="hero-texto">
+                <h2>Despierta tu mejor versión</h2>
+                <p>En <strong>FITNESS</strong> te ayudamos a superar tus límites. Un espacio diseñado para transformar tu cuerpo y mente, con tecnología moderna, entrenadores certificados y una comunidad que te impulsa cada día.</p>
+                <a href="pages/planes.html" class="btn">¡Únete hoy!</a>
+            </div>
+            <div class="hero-imagen">
+                <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%201%20GYM%20(1).png" alt="Persona entrenando en gimnasio" width="500px">
+            </div>
+        </section>
 
-  <!-- SECCION NOSOTROS -->
-  <section id="nosotros" class="info">
-    <div class="texto">
-      <h2>Sobre Nosotros</h2>
-      <p>FITNESS nació en 2025 con la misión de inspirar hábitos saludables en la sociedad peruana. Nos enfocamos en el desarrollo integral de nuestros miembros, combinando entrenamiento físico, mental y nutricional.</p>
-      <p>Creemos que el cambio empieza con disciplina y motivación, por eso te acompañamos paso a paso con rutinas personalizadas, clases en grupo, charlas y seguimiento de tus resultados.</p>
-      <a href="pages/nosotros.html" class="btn-secundario">Conócenos más</a>
-    </div>
-    <div class="imagen">
-      <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%202%20GYM.png" alt="Equipo FITNESS">
-    </div>
-  </section>
+        <!-- SECCION NOSOTROS -->
+        <section id="nosotros" class="info">
+            <div class="texto">
+                <h2>Sobre Nosotros</h2>
+                <p>FITNESS nació en 2025 con la misión de inspirar hábitos saludables en la sociedad peruana. Nos enfocamos en el desarrollo integral de nuestros miembros, combinando entrenamiento físico, mental y nutricional.</p>
+                <p>Creemos que el cambio empieza con disciplina y motivación, por eso te acompañamos paso a paso con rutinas personalizadas, clases en grupo, charlas y seguimiento de tus resultados.</p>
+                <a href="nosotros.html" class="btn-secundario">Conócenos más</a>
+            </div>
+            <div class="imagen">
+                <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/IMAGEN%202%20GYM.png" alt="Equipo FITNESS" width="500px">
+            </div>
+        </section>
 
-  <!-- SECCION SERVICIOS -->
-  <section id="servicios">
-    <h2>Nuestros Servicios</h2>
-    <div class="servicios-grid">
-      <article>
-        <i class="fa-solid fa-dumbbell"></i>
-        <h3>Entrenamiento Personalizado</h3>
-        <p>Rutinas adaptadas a tu condición física, con evaluación constante y asesoramiento profesional.</p>
-      </article>
-      <article>
-        <i class="fa-solid fa-heartbeat"></i>
-        <h3>Clases Grupales</h3>
-        <p>Zumba, yoga, pilates, spinning y más. Vive la energía de entrenar en equipo.</p>
-      </article>
-      <article>
-        <i class="fa-solid fa-apple-whole"></i>
-        <h3>Nutrición Deportiva</h3>
-        <p>Plan alimenticio elaborado por nutricionistas especializados según tus metas.</p>
-      </article>
-      <article>
-        <i class="fa-solid fa-laptop"></i>
-        <h3>Entrenamiento Online</h3>
-        <p>Accede a clases en vivo o rutinas virtuales desde la comodidad de tu hogar.</p>
-      </article>
-    </div>
-  </section>
+        <!-- SECCION SERVICIOS -->
+        <section id="servicios">
+            <h2>Nuestros Servicios</h2>
+            <div class="servicios-grid">
+                <article>
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <h3>Entrenamiento Personalizado</h3>
+                    <p>Rutinas adaptadas a tu condición física, con evaluación constante y asesoramiento profesional.</p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-heartbeat"></i>
+                    <h3>Clases Grupales</h3>
+                    <p>Zumba, yoga, pilates, spinning y más. Vive la energía de entrenar en equipo.</p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-apple-whole"></i>
+                    <h3>Nutrición Deportiva</h3>
+                    <p>Plan alimenticio elaborado por nutricionistas especializados según tus metas.</p>
+                </article>
+                <article>
+                    <i class="fa-solid fa-laptop"></i>
+                    <h3>Entrenamiento Online</h3>
+                    <p>Accede a clases en vivo o rutinas virtuales desde la comodidad de tu hogar.</p>
+                </article>
+            </div>
+        </section>
 
-  <!-- SECCION TESTIMONIOS -->
-  <section id="testimonios" class="bg-light">
-    <h2>Testimonios</h2>
-    <div class="testimonios-grid">
-      <article>
-        <p>"Gracias a FITNESS bajé 10 kilos y gané confianza en mí misma. ¡El mejor gimnasio de Arequipa!"</p>
-        <h4>- María López</h4>
-      </article>
-      <article>
-        <p>"Los entrenadores te motivan y personalizan todo. Me siento más fuerte y feliz cada día."</p>
-        <h4>- Jorge Ramos</h4>
-      </article>
-      <article>
-        <p>"Me encanta el ambiente, las clases de spinning y la comunidad. FITNESS cambió mi vida."</p>
-        <h4>- Lucía Paredes</h4>
-      </article>
-    </div>
-  </section>
+        <!-- SECCION TESTIMONIOS -->
+        <section id="testimonios" class="bg-light">
+            <h2>Testimonios</h2>
+            <div class="testimonios-grid">
+                <article>
+                    <p>"Gracias a FITNESS bajé 10 kilos y gané confianza en mí misma. ¡El mejor gimnasio de Arequipa!"</p>
+                    <h4>- María López</h4>
+                </article>
+                <article>
+                    <p>"Los entrenadores te motivan y personalizan todo. Me siento más fuerte y feliz cada día."</p>
+                    <h4>- Jorge Ramos</h4>
+                </article>
+                <article>
+                    <p>"Me encanta el ambiente, las clases de spinning y la comunidad. FITNESS cambió mi vida."</p>
+                    <h4>- Lucía Paredes</h4>
+                </article>
+            </div>
+        </section>
 
-  <!-- SECCION FAQ -->
-  <section id="faq">
-    <h2>Preguntas Frecuentes</h2>
-    <details>
-      <summary>¿Puedo probar una clase gratis?</summary>
-      <p>Sí, ofrecemos una clase de prueba gratuita para nuevos miembros.</p>
-    </details>
-    <details>
-      <summary>¿Qué horarios manejan?</summary>
-      <p>Estamos abiertos de lunes a sábado de 5:30 a.m. a 10:00 p.m. y domingos de 6:00 a.m. a 2:00 p.m.</p>
-    </details>
-    <details>
-      <summary>¿Tienen entrenadores personales?</summary>
-      <p>Sí, contamos con profesionales especializados en fuerza, resistencia y tonificación.</p>
-    </details>
-  </section>
+        <!-- SECCION FAQ -->
+        <section id="faq">
+            <h2>Preguntas Frecuentes</h2>
+            <details>
+                <summary>¿Puedo probar una clase gratis?</summary>
+                <p>Sí, ofrecemos una clase de prueba gratuita para nuevos miembros.</p>
+            </details>
+            <details>
+                <summary>¿Qué horarios manejan?</summary>
+                <p>Estamos abiertos de lunes a sábado de 5:30 a.m. a 10:00 p.m. y domingos de 6:00 a.m. a 2:00 p.m.</p>
+            </details>
+            <details>
+                <summary>¿Tienen entrenadores personales?</summary>
+                <p>Sí, contamos con profesionales especializados en fuerza, resistencia y tonificación.</p>
+            </details>
+        </section>
+    </main>
 
-  <!-- PIE DE PÁGINA -->
-  <footer>
-    <section id="redes">
-      <p>Síguenos en redes:</p>
-      <ul class="redes">
-        <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-        <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-      </ul>
-    </section>
-    <hr class="linea-div">
-    <p>© 2025 FITNESS - Despierta tu mejor versión</p>
-    <p>Proyecto grupal desarrollado por <strong>Karolay</strong> y <strong>Vanessa</strong> — Laboratorio: <em>Introducción al Desarrollo Web</em></p>
-  </footer>
+    <!-- PIE DE PÁGINA -->
+    <footer>
+        <section id="redes">
+            <p>Síguenos en redes:</p>
+            <ul class="redes">
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+        </section>
+        <hr class="linea-div">
+        <p>© 2025 FITNESS - Despierta tu mejor versión</p>
+        <p>Proyecto grupal desarrollado por <strong>Karolay</strong> y <strong>Vanessa</strong> — Laboratorio: <em>Introducción al Desarrollo Web</em></p>
+    </footer>
 
 </body>
 </html>
