--- a/contactanos.html
+++ b/contactanos.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctanos | FITNESS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="contactano.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <h1><a href="index.html">FITNESS</a></h1>
-
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">
-            <i class="fa-solid fa-bars"></i>
-        </label>
-
-        <nav>
-            <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="index.html#nosotros-servicios">Nosotros</a></li>
-            <li><a href="index.html#entrenadores">Entrenadores</a></li>
-            <li><a href="contactanos.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- NAVBAR -->
+    <nav>
+        <div class="logo">
+            <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" alt="Logo FITNESS GYM" class="logo-img">
+        </div>
+        <ul class="menu">
+            <li><a href="index.html" class="active">Inicio</a></li>
+            <li><a href="index.html/#nosotros">Nosotros</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#equipo">Equipo</a></li>
+            <li><a href="#faq">Preguntas</a></li>
+            <li><a href="contactanos.html">Contáctanos</a></li>
+            <li><a href="#"><i class='bx bx-log-in'></i></a></li>
+        </ul>
+    </nav>
 
     <section id="contacto" class="contacto">
         <div class="contacto-contenedor">
@@ -35,10 +35,10 @@
                 ¡Estamos aquí para ayudarte a alcanzar tu mejor versión!</p>
 
                 <ul>
-                <li>Atención personalizada</li>
-                <li>Planes mensuales y anuales</li>
-                <li>Clases grupales y asesorías individuales</li>
-                <li>Ambiente motivador y moderno</li>
+                    <li>Atención personalizada</li>
+                    <li>Planes mensuales y anuales</li>
+                    <li>Clases grupales y asesorías individuales</li>
+                    <li>Ambiente motivador y moderno</li>
                 </ul>
             </div>
 
@@ -71,34 +71,10 @@
         </div>
     </section>
 
-    <section class="comunicate">
-        <h3>Comunícate con nosotros</h3>
-        <ul class="telefono">
-            <li><i class="fa-solid fa-phone"></i><strong>Teléfono principal:</strong> +51 948 019 629</li>
-            <li><i class="fa-brands fa-whatsapp"></i> <strong>WhatsApp:</strong> +51 929 377 161</li>
-            <li><i class="fa-solid fa-envelope"></i> contacto@fitnessgym.com</li>
-        </ul>
-    </section>
-
-    <footer>
-        <section id="logo">
-        <img src="image.png" alt="LOGO BlackWhite" width="200">
-        </section>
-        <hr class="linea-div">
-
-        <section id="redes">
-        <p>Síguenos en redes:</p>
-        <ul class="redes">
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://www.tiktok.com/" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-        </ul>
-        </section>
-
-        <hr class="linea-div">
-        <p>© 2025 FITNESS - Despierta tu mejor versión</p>
-        <p>Proyecto grupal desarrollado por Vanessa y Karolay para el curso Introducción al Desarrollo Web</p>
-  </footer>
+    <!-- FOOTER -->
+    <footer >
+        <img src="https://github.com/bvelasquezp-BrigitteKarolay/Proyecto-Grupal/raw/main/LOGO%20GYM.png" alt="Logo" width="80" style="margin-bottom:10px;">
+        <p>© 2025 FITNESS GYM – Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
