--- a/contactanos.html
+++ b/contactanos.html
@@ -17,10 +17,10 @@
         </div>
         <ul class="menu">
             <li><a href="index.html" class="active">Inicio</a></li>
-            <li><a href="index.html/#nosotros">Nosotros</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#equipo">Equipo</a></li>
-            <li><a href="#faq">Preguntas</a></li>
+            <li><a href="index.html#nosotros">Nosotros</a></li>
+            <li><a href="index.html#servicios">Servicios</a></li>
+            <li><a href="index.html#equipo">Equipo</a></li>
+            <li><a href="index.html#faq">Preguntas</a></li>
             <li><a href="contactanos.html">Contáctanos</a></li>
             <li><a href="#"><i class='bx bx-log-in'></i></a></li>
         </ul>
