--- a/menbresia.html
+++ b/menbresia.html
@@ -143,7 +143,7 @@
     <section class="cta-contacto">
         <h3>¿Listo para un nuevo comienzo?</h3>
         <p>Contáctanos y recibe la orientación ideal para elegir tu membresía perfecta.</p>
-        <a href="contactanos.html" class="btn-cta btn-primary large">Hablar con un asesor</a>
+        <a href="contactanos.html" class="btn-cta btn-primary large">Escribenos ahora</a>
     </section>
 
     <!-- FOOTER -->
